<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.task.android.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:paddingBottom="8dp">

            <TextView
                android:id="@+id/tvFromCL"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="18dp"
                android:text="@string/constraint_layout"
                android:textColor="@color/black"
                android:textSize="24sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/btnFromCL"
                android:layout_width="wrap_content"
                android:layout_height="65dp"
                android:layout_gravity="center_horizontal"
                android:text="@string/button_from_ll"
                android:textAllCaps="false"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="@id/tvFromCL"
                app:layout_constraintStart_toStartOf="@id/tvFromCL"
                app:layout_constraintTop_toBottomOf="@id/tvFromCL" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:paddingBottom="8dp">

            <TextView
                android:id="@+id/tvFromRL"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="8dp"
                android:layout_marginTop="18dp"
                android:text="@string/relative_layout"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="24sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/etFromRL"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/tvFromRL"
                android:layout_marginHorizontal="18dp"
                android:layout_marginTop="8dp"
                android:hint="@string/enter_your_name"
                android:inputType="text"
                android:maxLength="32"
                android:padding="16dp"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <ImageButton
                android:id="@+id/btnClearFromRL"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignTop="@id/etFromRL"
                android:layout_alignEnd="@id/etFromRL"
                android:layout_marginTop="4dp"
                android:background="@android:color/transparent"
                android:padding="8dp"
                android:scaleType="center"
                android:src="@drawable/ic_baseline_clear_24"
                android:visibility="gone" />

            <TextView
                android:id="@+id/tvFromETRL"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/etFromRL"
                android:layout_alignStart="@id/etFromRL"
                android:layout_alignEnd="@id/etFromRL"
                android:padding="8dp"
                android:text="@string/none"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="italic" />

            <Button
                android:id="@+id/btnFromRL"
                android:layout_width="wrap_content"
                android:layout_height="65dp"
                android:layout_below="@id/tvFromETRL"
                android:layout_alignStart="@id/etFromRL"
                android:layout_alignEnd="@id/etFromRL"
                android:layout_marginTop="4dp"
                android:text="@string/button_from_rl" />
        </RelativeLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="Frame Layout"
                android:textColor="@color/black"
                android:textSize="24sp"
                android:textStyle="bold" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvFromFL"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="36dp"
                tools:listitem="@layout/recycler_layout" />
        </FrameLayout>
    </LinearLayout>
</androidx.core.widget.NestedScrollView>
