<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    android:padding="4dp"
    app:cardCornerRadius="8dp"
    app:cardElevation="8dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <EditText
            android:id="@+id/etFromRV"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginTop="4dp"
            android:hint="@string/enter_your_name"
            android:inputType="textPersonName"
            android:maxLength="48"
            android:padding="18dp"
            android:textColor="@color/black"
            android:textSize="18sp"
            app:layout_constraintEnd_toStartOf="@id/btnFromRV"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:id="@+id/btnClearFromRV"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginEnd="8dp"
            android:background="@android:color/transparent"
            android:padding="12dp"
            android:src="@drawable/ic_baseline_clear_24"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="@id/etFromRV"
            app:layout_constraintEnd_toEndOf="@id/etFromRV"
            app:layout_constraintTop_toTopOf="@id/etFromRV" />

        <Button
            android:id="@+id/btnFromRV"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="4dp"
            android:text="@string/ok"
            android:textAlignment="center"
            app:layout_constraintBottom_toBottomOf="@id/etFromRV"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/etFromRV"
            app:layout_constraintTop_toTopOf="@id/etFromRV" />

        <TextView
            android:id="@+id/tvNoneFromRV"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:paddingBottom="8dp"
            android:text="@string/none"
            android:textAlignment="center"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="@id/btnFromRV"
            app:layout_constraintStart_toStartOf="@id/etFromRV"
            app:layout_constraintTop_toBottomOf="@id/etFromRV" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>
